--- a/jqueryui-0.1/app/views/jqueryui/Demo/index.html
+++ b/jqueryui-0.1/app/views/jqueryui/Demo/index.html
@@ -1,8 +1,10 @@
 #{extends 'jqueryui/layout.html'/}
 
-<p>This module provides working examples of <a href="http://jqueryui.com/">jQuery UI</a> widgets, integrated with a Play appliction. This is not a Play module in the normal sense, providing additional server-side functionality that your application will directly depend on. Instead, this module provides re-usable view template and JavaScript snippets that you can use, as well us sample controller actions for the server-side parts.</p>
+<p>This module provides working examples of <a href="http://jqueryui.com/">jQuery UI</a> widgets, integrated with a Play appliction.</p>
 
-<h2>Widgets</h2>
+<p>This is not a Play module in the normal sense, providing additional server-side functionality that your application will directly depend on. Instead, this module provides re-usable view template and JavaScript snippets that you can use, as well us sample controller actions for the server-side parts.</p>
+
+<h2>jQuery UI widgets</h2>
 
 <ul>
 	<li>
