--- a/jqueryui-0.1/app/views/jqueryui/Tabs/index.html
+++ b/jqueryui-0.1/app/views/jqueryui/Tabs/index.html
@@ -4,36 +4,29 @@
 <h2>Tabs - lazy loading</h2>
 
 <p>Use <a href="http://jqueryui.com/demos/tabs/">tabs</a> to define content sections and lazily load the content when the
-	tab is selected, in the same way as for the accordion.</p>
+tab is selected, in the same way as for the accordion.</p>
+
+
+<h3>Demo</h3>
 
 <div class="demo">
-	<div class="tabs">
-		<ul>
-			<li><a href="@{jqueryui.Accordion.region('Africa')}"><span>Africa</span></a></li>
-			<li><a href="@{jqueryui.Accordion.region('America')}"><span>America</span></a></li>
-			<li><a href="@{jqueryui.Accordion.region('Asia')}"><span>Asia</span></a></li>
-			<li><a href="@{jqueryui.Accordion.region('Australia')}"><span>Australia</span></a></li>
-			<li><a href="@{jqueryui.Accordion.region('Europe')}"><span>Europe</span></a></li>
-		</ul>
-	</div>
+#{include 'jqueryui/Tabs/tabs.html'/}
 </div>
+
 
 <h3>Client</h3>
 
-<p>The <code>tabs.js</code> JavaScript applies the jQuery UI tabs plug-in to a list of links to the content. Note that this
-	JavaScript has very little to do, because the tabs plug-in supports Ajax loading out of the box.</p>
+<p>The widget is based on a a list of links to the Ajax content that will populate them.</p>
 
-<pre><code>&lt;div class="tabs"&gt;
-&lt;ul&gt;
-&lt;li&gt;&lt;a href="&#64;{jqueryui.Accordion.region('Africa')}"&gt;&lt;span&gt;Africa&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
-&lt;li&gt;&lt;a href="&#64;{jqueryui.Accordion.region('America')}"&gt;&lt;span&gt;America&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
-&lt;li&gt;&lt;a href="&#64;{jqueryui.Accordion.region('Asia')}"&gt;&lt;span&gt;Asia&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
-&lt;li&gt;&lt;a href="&#64;{jqueryui.Accordion.region('Australia')}"&gt;&lt;span&gt;Australia&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
-&lt;li&gt;&lt;a href="&#64;{jqueryui.Accordion.region('Europe')}"&gt;&lt;span&gt;Europe&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
-&lt;/ul&gt;
-&lt;/div&gt;
-</code></pre>
+<pre class="prettyprint"><code>#{includeVerbatim 'jqueryui/Tabs/tabs.html'/}</code></pre>
+
+<p>The <code>tabs.js</code> JavaScript applies the jQuery UI tabs plug-in to a list of links to the content. Note that this
+JavaScript has very little to do, because the tabs plug-in supports Ajax loading out of the box.</p>
+
+<pre class="prettyprint"><code>#{includeVerbatim '/public/javascripts/tabs.js'/}</code></pre>
+
 
 <h3>Server</h3>
 
-<p>Tabs use the same <code>jqueryui.Accordion.region(String header)</code> action as the accordion.</p>
+<p>The tabs use the same <code>jqueryui.Accordion.region(String header)</code> action
+and <code>jqueryui/Accordion/region.html</code> template as the <a href="@{jqueryui.Accordion.index()}">accordion</a>.</p>
