--- a/jqueryui-0.1/app/views/jqueryui/Progressbar/index.html
+++ b/jqueryui-0.1/app/views/jqueryui/Progressbar/index.html
@@ -11,7 +11,13 @@ Play’s web sockets support is ideal for updating the progress bar, and Play’
 <h3>Demo</h3>
 
 <div class="demo">
-<div id="progressbar" data-url="@@{jqueryui.Progressbar.ProgressSocket.progress()}"></div>
+#{form @startJob()}
+<p><button type="submit">Start Job</button></p>
+#{/form}
+#{if processId}
+<p>Job ${processId} progress:</p>
+<div id="progressbar" data-url="@@{jqueryui.ProgressSocket.progress(processId)}"></div>
+#{/if}
 </div>
 
 
@@ -19,10 +25,10 @@ Play’s web sockets support is ideal for updating the progress bar, and Play’
 
 <p>The widget is based on an empty HTML <code>div</code> element.</p>
 
-<pre class="prettyprint"><code>&lt;div id="progressbar" data-url="&#64;&#64;{jqueryui.Progressbar.ProgressSocket.progress()}"&gt&lt;/div&gt;</code></pre>
+<pre class="prettyprint"><code>&lt;div id="progressbar" data-url="&#64;&#64;{jqueryui.ProgressSocket.progress(processId)}"&gt&lt;/div&gt;</code></pre>
 
 <p>The <code>data-url</code> attribute value specifies the URL for a web socket connection.
-Note that the template uses the <code>@@</code> syntax to generate an absolute URL that includes the web socket protocol - <code>@@{jqueryui.Progressbar.ProgressSocket.progress()}</code>.</p>
+Note that the template uses the <code>@@</code> syntax to generate an absolute URL that includes the web socket protocol - <code>@@{jqueryui.ProgressSocket.progress(processId)}</code>.</p>
 
 <p>The <code>progressbar.js</code> JavaScript applies the jQuery UI dialog plug-in to the <code>div</code> element and opens a web socket connection.
 Finally, the JavaScript uses web socket messages to update the progress bar value.</p>
@@ -32,7 +38,22 @@ Finally, the JavaScript uses web socket messages to update the progress bar valu
 
 <h3>Server</h3>
 
-<p>The server is a web socket controller that starts an asynchronous job.
-This job reports its progress by publishing its completion percentage to an event stream that results in web socket messages to the browser client.</p>
+<p>The server-side has three parts. First, we define an implementation of a long-running job, which has a generated UUID identifier and an event stream that the job will publish progress to.
+The implementation in this example simply waits for short intervals, publishing progress to the event stream after each one.</p>
 
-<pre class="prettyprint"><code>#{includeVerbatim 'app/controllers/jqueryui/DatePicker.java'/}</code></pre>
+<pre class="prettyprint"><code>#{includeVerbatim 'app/models/jqueryui/Process.java'/}</code></pre>
+
+<p>The second server-side class is a conventional action that starts an asynchronous long-running job, and caches a reference to the job.
+This action then renders the same page with a <code>processId</code> argument that indicates that a job has been started.</p>
+
+<pre class="prettyprint"><code>#{includeVerbatim 'app/controllers/jqueryui/ProgressBar.java'/}</code></pre>
+
+<p>The last part is a is a web socket controller that retrieves the running job from the cache, using its ID, and waits for events on the job’s event stream.
+When the job publishes a completion percentage to its event stream, the controller sends the data in a web socket message to the browser client.</p>
+
+<pre class="prettyprint"><code>#{includeVerbatim 'app/controllers/jqueryui/ProgressSocket.java'/}</code></pre>
+
+<p>Note that this design means that the job is started by a conventional HTTP POST request to the <code>Progressbar.startJob()</code> action,
+which means that the job is executed even if the client does not have web socket support and is therefore unable to update the progress bar.</p>
+
+<p>One possible enhancement would be to add JavaScript to detect the case where web sockets are not supported, and send a single Ajax request to get the current progress value to update the progress bar.</p>
