--- a/jqueryui-0.1/public/stylesheets/demo.css
+++ b/jqueryui-0.1/public/stylesheets/demo.css
@@ -6,10 +6,10 @@ a:hover { color:blue; text-decoration:underline; }
 h2 { border-top: 4px solid #E0E0E0; margin-top:1.5em; padding-top:0.5em; }
 .ui-widget-content { font-size: 90%; }
 pre, code { background-color: ghostWhite; }
-code { font-family: Consolas,"Andale Mono",monospace;  }
-pre { border-left: 4px solid #E0E0E0; font-size: 90%; line-height: 1.5em; padding: 0.5em; }
+code { font-family: Consolas,Inconsolata,Monaco,monospace; }
+pre { border-left: 4px solid #E0E0E0; padding: 0.5em; }
 pre.prettyprint { border:none; }
-p code { font-size: 90%; color: #444; border: 1px solid #E0E0E0; padding: 0 0.2em!important; }
+p code { color: #444; border: 1px solid #E0E0E0; padding: 0 0.2em!important; }
 
 /* Datepicker */
 input.date { margin-right:0.5em; }
@@ -22,3 +22,7 @@ div.dialog th { text-align:left;  }
 
 /* Progress bar */
 body.progressbar div.demo { width:50%; }
+
+/* Google Prettify colour overrides */
+.prettyprint .com {color:#080;}
+.prettyprint .atv, .prettyprint .str {color:#800;}
