Add note about browser WebSocket support

--- a/app/views/jqueryui/Progressbar/index.html
+++ b/app/views/jqueryui/Progressbar/index.html
@@ -10,6 +10,8 @@ Play’s web sockets support is ideal for updating the progress bar, and Play’
 
 <h3>Demo</h3>
 
+<p class="note"><strong>Note</strong> that the WebSocket API version used by Play 1.2.3 is only supported by Safari and Chrome (less than version 14). Play 1.2.4 is expected to support Safari, Chrome, Firefox and Internet Explorer 10.</p>
+
 <div class="demo">
 #{form @startJob()}
 <p><button type="submit">Start Job</button></p>
