--- a/app/views/jqueryui/Progressbar/index.html
+++ b/app/views/jqueryui/Progressbar/index.html
@@ -4,7 +4,7 @@
 
 <h2>Progress bar</h2>
 
-<p>Use a <a href="http://jqueryui.com/demos/progressbar/">progress bar</a> to show progress for a server-size process for which the completion percentage can be calculated.
+<p>Use a <a href="http://jqueryui.com/demos/progressbar/">progress bar</a> to show progress for a server-side process for which the completion percentage can be calculated.
 Play’s web sockets support is ideal for updating the progress bar, and Play’s asynchronous jobs are suitable for long-running jobs.</p>
 
 
